Require Java 17
Keeping support for Java 8 only results in headaches.