@@ -3,17 +3,7 @@ import com.github.vlsi.gradle.crlf.LineEndings
 
 plugins {
     `java-library`
-    `module-info-compile`
     id("com.github.vlsi.crlf")
-}
-
-configure<ModuleInfoExtension> {
-    version = JavaVersion.VERSION_11
-    extraArgs = listOf(
-        "--add-exports",
-        "java.desktop/sun.awt=darklaf.compatibility"
-    )
-    stubModule("darklaf.core")
 }
 
 dependencies {
